update packages and dependenties version

--- a/src/resources/pandoc.css
+++ b/src/resources/pandoc.css
@@ -5,7 +5,7 @@ custom mddoc css start here
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
     color: #24292e;
-    font-family: Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-family: Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-size: 16px;
     line-height: 1.5;
     word-wrap: break-word;
